db and validation changes

--- a/photosharing/Views/Account/Registration.cshtml
+++ b/photosharing/Views/Account/Registration.cshtml
@@ -7,22 +7,22 @@
             <div class="ps_form_input_wrapper">
                 <label asp-for="Email" class="ps_form_label">Email</label>
                 <input type="text" asp-for="Email" class="ps_form_input"/>
-                <span asp-validation-for="Email" />
+                <span asp-validation-for="Email"></span>
             </div>
             <div class="ps_form_input_wrapper">
                 <label asp-for="Username" class="ps_form_label">Username</label>
                 <input type="text" asp-for="Username" class="ps_form_input" />
-                <span asp-validation-for="Username" />
+                <span asp-validation-for="Username" ></span>
             </div>
             <div class="ps_form_input_wrapper">
                 <label asp-for="Password"  class="ps_form_label">Password</label>
                 <input asp-for="Password"  class="ps_form_input"/>
-                <span asp-validation-for="Password" />
+                <span asp-validation-for="Password"></span>
             </div>
             <div class="ps_form_input_wrapper">
                 <label asp-for="ConfirmPassword"  class="ps_form_label">Confirm password</label>
                 <input asp-for="ConfirmPassword"  class="ps_form_input"/>
-                <span asp-validation-for="ConfirmPassword" />
+                <span asp-validation-for="ConfirmPassword" class="has-error" ></span>
             </div>
           
                 <input type="submit" value="Registration" class="ps_form_button" />
