--- a/photosharing/wwwroot/css/index.css
+++ b/photosharing/wwwroot/css/index.css
@@ -30,7 +30,6 @@
     line-height: normal;
     font-size: 20px;
     letter-spacing: -0.05em;
-    color: #000000;
     padding-left: 40px;
     height: 100%;
     align-items: center;
@@ -113,7 +112,7 @@
     height: 40px;
     width: 100%;
     background: #FFFFFF;
-    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.25);
     border-radius: 30px;
     border:none;
     color:#000000;
@@ -502,8 +501,6 @@
     justify-content:center;
     align-items:center;
 }
-.ps_modal_likes_info{
-}
 .ps_modal_creation {
     font-family: Roboto;
     font-style: normal;
@@ -705,5 +702,10 @@
         margin: 0;
         margin-top: 10px;
         align-items: center;
+    }
+    .modal-dialog {
+        display:flex;
+        justify-content:center;
+        align-items:center;
     }
 }
