fix models and layout

--- a/photosharing/wwwroot/css/index.css
+++ b/photosharing/wwwroot/css/index.css
@@ -656,8 +656,8 @@
     }
 
     .modal-open .modal {
-        justify-content: unset;
-        align-items: unset;
+        justify-content: center;
+        align-items: center;
     }
 
     .ps_navbar_list {
